refactor controllers and repos, create loyalty coupon
